# XCOM-2-WOTC-discord-rpc

./: README.md  log_parser.py  main.py  pyproject.toml
ModBuddy/XCOM/discordRPC/: discordRPC.XCOM_sln  discordRPC.XCOM_suo  discordRPC.v12.XCOM_suo
ModBuddy/XCOM/discordRPC/discordRPC/: discordRPC.x2proj
ModBuddy/XCOM/discordRPC/discordRPC/Config/: XComEditor.ini  XComEngine.ini  XComGame.ini
ModBuddy/XCOM/discordRPC/discordRPC/Src/discordRPC/Classes/: RPCContentInfo.uc  UISLRPCListener.uc
scripts/: add_rpc_in_startapp.bat
tools/: log_cleaner.py  log_filler.py  log_info.txt  log_parser_tools.py  ui_states.txt
